--- a/src/main/resources/com/example/pank_java/login.fxml
+++ b/src/main/resources/com/example/pank_java/login.fxml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.pank_java.controllers.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
-
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pank_java.controllers.Sisselogimine"
+            prefWidth="400" prefHeight="250">
+    <VBox spacing="15.0" alignment="CENTER" AnchorPane.topAnchor="25.0" AnchorPane.bottomAnchor="25.0"
+          AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0">
+        <Label text="Welcome" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
+        <TextField fx:id="kasutajaNimi" promptText="Username"/>
+        <PasswordField fx:id="parool" promptText="Password"/>
+        <HBox spacing="20.0" alignment="CENTER">
+            <Button text="Logi sisse" onAction="#login" prefWidth="100"/>
+            <Button text="Registreeri" onAction="#registreeri" prefWidth="100"/>
+        </HBox>
+    </VBox>
+</AnchorPane>
