--- a/src/main/resources/com/example/pank_java/account.fxml
+++ b/src/main/resources/com/example/pank_java/account.fxml
@@ -17,7 +17,7 @@
               AnchorPane.leftAnchor="20"
               AnchorPane.rightAnchor="20">
 
-            <Label text="Arvelduskontod"
+            <Label text="Arvelduskonto"
                    style="-fx-font-size:18px; -fx-font-weight:bold;" />
 
             <HBox spacing="10" alignment="CENTER_LEFT">
