Fix logivälja nupp

--- a/src/main/resources/com/example/pank_java/account.fxml
+++ b/src/main/resources/com/example/pank_java/account.fxml
@@ -14,20 +14,23 @@
 
     <children>
 
-        <Button styleClass="btn-secondary"
-                fx:id="valjaLogiButton"
-                text="Logi välja"
-                onAction="#logiVälja"
-                AnchorPane.topAnchor="20"
-                AnchorPane.rightAnchor="20"/>
 
         <VBox spacing="15"
               AnchorPane.topAnchor="20"
               AnchorPane.leftAnchor="20"
               AnchorPane.rightAnchor="20">
 
-            <Label text="Arvelduskonto"
-                   style="-fx-font-size:18px; -fx-font-weight:bold;" />
+            <HBox spacing="400">
+                <Label text="Arvelduskonto"
+                       style="-fx-font-size:18px; -fx-font-weight:bold;" />
+
+                <Button styleClass="btn-secondary"
+                        fx:id="valjaLogiButton"
+                        text="Logi välja"
+                        onAction="#logiVälja"
+                        AnchorPane.topAnchor="20"
+                        AnchorPane.rightAnchor="20"/>
+            </HBox>
 
             <HBox spacing="10" alignment="CENTER_LEFT">
                 <Label text="Kokku vabad vahendid:"/>
